05-services-loadbalancing/configs/pod-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: k8s-lab
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
