05-services-loadbalancing/configs/externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-service
spec:
  type: ExternalName
  externalName: httpforever.com
