05-services-loadbalancing/configs/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-nginx
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: stateful-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  labels:
    app: server-stateful
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateful-nginx
  serviceName: headless-nginx
  template:
    metadata:
      labels:
        app: stateful-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
