05-services-loadbalancing/configs/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
