05-services-loadbalancing/configs/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
